--- a/poc/src/main/resources/org/epa/mda/poc/poc.ProductRegistration-taskform.form
+++ b/poc/src/main/resources/org/epa/mda/poc/poc.ProductRegistration-taskform.form
@@ -3,4 +3,175 @@
 <property name="name" value="poc.ProductRegistration-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
+<field position="0" name="product_brandName" type="InputText" id="803515174">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;brandName (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="product/brandName"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="1" name="product_companyName" type="InputText" id="597684273">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;companyName (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="product/companyName"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="2" name="product_companyId" type="InputText" id="518684751">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="true"/>
+<property name="label" value="quot;enquot;,quot;companyId (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="product/companyId"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="3" name="product_address" type="InputText" id="1735714277">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;address (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="product/address"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="4" name="product_city" type="InputText" id="625497291">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="true"/>
+<property name="label" value="quot;enquot;,quot;city (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="product/city"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="5" name="product_state" type="InputText" id="863795097">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="true"/>
+<property name="label" value="quot;enquot;,quot;state (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="product/state"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="6" name="product_province" type="InputText" id="2126667418">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="true"/>
+<property name="label" value="quot;enquot;,quot;province (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="product/province"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="7" name="product_zip" type="InputText" id="942094109">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="true"/>
+<property name="label" value="quot;enquot;,quot;zip (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="product/zip"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="9" name="product_unleadedPremGas" type="CheckBox" id="2075924027">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="false"/>
+<property name="label" value="quot;enquot;,quot;unleadedPremGas (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="product/unleadedPremGas"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
+</field>
+<field position="11" name="product_unleadedRegGas" type="CheckBox" id="2077982477">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="false"/>
+<property name="label" value="quot;enquot;,quot;unleadedRegGas (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="product/unleadedRegGas"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
+</field>
+<field position="13" name="product_unleadedMidGas" type="CheckBox" id="1378968787">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="false"/>
+<property name="label" value="quot;enquot;,quot;unleadedMidGas (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="product/unleadedMidGas"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
+</field>
+<field position="10" name="product_grade1Diesel" type="CheckBox" id="1676274512">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="true"/>
+<property name="label" value="quot;enquot;,quot;grade1Diesel (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="product/grade1Diesel"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
+</field>
+<field position="8" name=":decorator_0" type="Separator" id="711137683">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="false"/>
+<property name="readonly" value="false"/>
+<property name="fieldClass" value="Separator"/>
+</field>
+<field position="12" name="product_grade2Diesel" type="CheckBox" id="1704654172">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="true"/>
+<property name="label" value="quot;enquot;,quot;grade2Diesel (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="product/grade2Diesel"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
+</field>
+<field position="14" name="product_bioDiesel" type="CheckBox" id="222889738">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="true"/>
+<property name="label" value="quot;enquot;,quot;bioDiesel (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="product/bioDiesel"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
+</field>
+<field position="15" name="product_renewableDiesel" type="CheckBox" id="1718511604">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;renewableDiesel (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="product/renewableDiesel"/>
+<property name="fieldClass" value="java.lang.Boolean"/>
+</field>
+<field position="16" name=":decorator_1" type="Separator" id="2046106241">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="false"/>
+<property name="fieldClass" value="Separator"/>
+</field>
+<field position="17" name="product_aromaticsPercent" type="InputTextInteger" id="1588335975">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;aromaticsPercent (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="product/aromaticsPercent"/>
+<property name="fieldClass" value="java.lang.Integer"/>
+</field>
+<field position="18" name="product_olefinsPercent" type="InputTextInteger" id="1821810819">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;olefinsPercent (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="product/olefinsPercent"/>
+<property name="fieldClass" value="java.lang.Integer"/>
+</field>
+<field position="19" name="product_saturatesPercent" type="InputTextInteger" id="917680483">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;saturatesPercent (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="product/saturatesPercent"/>
+<property name="fieldClass" value="java.lang.Integer"/>
+</field>
+<field position="20" name="product_polynuclearOrgMatPercent" type="InputTextInteger" id="22458316">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;polynuclearOrgMatPercent (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="product/polynuclearOrgMatPercent"/>
+<property name="fieldClass" value="java.lang.Integer"/>
+</field>
+<field position="21" name="product_sulfurPercent" type="InputTextInteger" id="914597939">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;sulfurPercent (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="product/sulfurPercent"/>
+<property name="fieldClass" value="java.lang.Integer"/>
+</field>
+<field position="22" name="product_traceElementsPercent" type="InputTextInteger" id="1559125524">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;traceElementsPercent (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="product/traceElementsPercent"/>
+<property name="fieldClass" value="java.lang.Integer"/>
+</field>
+<dataHolder inputId="" name="#E9E371" type="dataModelerEntry" outId="product" value="org.epa.mda.poc.Product" id="product"/>
 </form>
